# foundry

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE-OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  compose.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md
backend/: Dockerfile.dev  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  errors.py  logging.py  main.py  models.py  schemas.py  seed.py
backend/app/auth/: cookies.py  dependencies.py  jwt.py  local.py  passwords.py  provider.py
backend/app/routes/: auth.py  detections.py  health.py
backend/tests/: conftest.py  test_auth.py  test_detections.py  test_health.py
backend/tests/unit/: test_jwt.py  test_passwords.py
docs/: repo-configuration.md
docs/adr/: 0000-adr-template.md  0001-license-apache-2-open-core.md  0002-auth-abstraction.md  0003-gitops-flow.md  0004-secrets-management.md  0005-release-versioning.md  0006-contribution-model.md  0007-testing-strategy.md  0008-open-core-boundary.md  0010-backend-architecture.md
frontend/: Dockerfile.dev  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
scripts/: check-dco.sh
